--- a/ansible/roles/ocp4-workload-debugging-workshop/tasks/post_workload.yml
+++ b/ansible/roles/ocp4-workload-debugging-workshop/tasks/post_workload.yml
@@ -13,7 +13,7 @@
   retries: 30
   delay: 120
   changed_when: false
-  
+
 - name: Wait for the CodeReady Workspaces to be ready
   k8s:
     api_version: v1
@@ -66,14 +66,14 @@
 
     - name: "[{{ workshop_operator_namespace }}] Found deployments"
       fail:
-        msg: "[{{ workshop_operator_namespace }}] no deployments found"
+        msg: "[{{ workshop_operator_namespace }}] false deployments found"
       when: workshop_infra_verify_dc is not defined
 
     - name: "[{{ workshop_operator_namespace }}] Checking deployments"
       fail:
         msg: "[{{ workshop_operator_namespace }}] Some/all deployments are not ready"
       when: item.replicas is not defined or item.readyReplicas is not defined  or item.replicas != item.readyReplicas
-      loop: "{{ workshop_infra_verify_dc|json_query('resources[*].status') }}"
+      loop: "{{ workshop_infra_verify_dc | json_query('resources[*].status') }}"
 
 - name: Check CodeReadyWorkspaces
   block:
@@ -88,14 +88,14 @@
 
     - name: "[workspaces] Found deployments"
       fail:
-        msg: "[workspaces] no deployments found"
+        msg: "[workspaces] false deployments found"
       when: crw_verify_dc is not defined
 
     - name: "[workspaces] Checking deployments"
       fail:
         msg: "[workspaces] Some/all deployments are not ready"
       when: item.replicas is not defined or item.readyReplicas is not defined  or item.replicas != item.readyReplicas
-      loop: "{{ crw_verify_dc|json_query('resources[*].status') }}"
+      loop: "{{ crw_verify_dc | json_query('resources[*].status') }}"
 
 - name: Check Istio
   block:
@@ -110,14 +110,14 @@
 
     - name: "[istio-system] Found deployments"
       fail:
-        msg: "[istio-system] no deployments found"
+        msg: "[istio-system] false deployments found"
       when: istio_verify_dc is not defined
 
     - name: "[istio-system] Checking deployments"
       fail:
         msg: "[istio-system] Some/all deployments are not ready"
       when: item.replicas is not defined or item.readyReplicas is not defined  or item.replicas != item.readyReplicas
-      loop: "{{ istio_verify_dc|json_query('resources[*].status') }}"
+      loop: "{{ istio_verify_dc | json_query('resources[*].status') }}"
 
 - name: Check Argo CD
   block:
@@ -130,24 +130,26 @@
 
     - name: "[argo cd] Found deployments"
       fail:
-        msg: "[argo cd] no deployments found"
+        msg: "[argo cd] false deployments found"
       when: argocd_verify_dc is not defined
 
     - name: "[argo cd] Checking deployments"
       fail:
         msg: "[argocd] Some/all deployments are not ready"
       when: item.replicas is not defined or item.readyReplicas is not defined  or item.replicas != item.readyReplicas
-      loop: "{{ argocd_verify_dc|json_query('resources[*].status') }}"
+      loop: "{{ argocd_verify_dc | json_query('resources[*].status') }}"
 
 - name: lab data for user info
   agnosticd_user_info:
     user: "{{ item }}"
     data:
+# yamllint disable rule:line-length
       msg: |
         Username: {{ item }}
         Password: {{ workshop_openshift_user_password }}
         Workshop User Guide: http://bookbag-{{ item | regex_replace('^user(.*)$', '\1') }}-{{ workshop_operator_namespace }}.{{ route_subdomain }}/workshop
   loop: "{{ users }}"
+# yamllint enable rule:line-length
 
 - name: output workshop info
   debug:
@@ -155,13 +157,21 @@
       - "user.info: "
       - "user.info: Debugging Workshop provisioned for {{ user_count }} user(s)"
       - "user.info: "
-      - "user.info: Workshop User Guide: http://bookbag-XX-{{ workshop_operator_namespace }}.{{ route_subdomain }}/workshop"
+      - >-
+        user.info: Workshop User Guide:
+        http://bookbag-XX-{{
+        workshop_operator_namespace
+        }}.{{
+        route_subdomain
+        }}/workshop
       - "user.info: Etherpad: http://etherpad-{{ workshop_operator_namespace }}.{{ route_subdomain }}"
       - "user.info: "
       - "user.info: You should share the Etherpad URL (or a shortlink for it) with attendees to self-assign a user."
       - "user.info: It is all they will need to get started!"
       - "user.info: "
-      - "user.info: OpenShift credentials for attendees: '{{ workshop_openshift_user_name }}' / '{{ workshop_openshift_user_password }}'"
+      - >-
+        user.info: OpenShift credentials for attendees:
+        '{{ workshop_openshift_user_name }}' / '{{ workshop_openshift_user_password }}'
       - "user.info: "
       - "user.info: OpenShift Console: {{ console_url }}"
       - "user.info: Cluster admin login with '{{ ocp_username }}' / '{{ workshop_openshift_admin_password }}'"
@@ -173,10 +183,10 @@
       - "user.info: "
       - "user.info: NOTE: Workspaces in CodeReady are provisioned asynchronously and may not"
       - "user.info: be accessible until rollout finishes shortly."
-  when: not silent|bool
+  when: not silenti | bool
 
 # Leave this as the last task in the playbook.
 - name: post_workload tasks complete
   debug:
     msg: "Post-Workload Tasks completed successfully."
-  when: not silent|bool
+  when: not silent | bool
