--- a/ansible/roles/ocp4-workload-dil-streaming/tasks/provision_webapp.yaml
+++ b/ansible/roles/ocp4-workload-dil-streaming/tasks/provision_webapp.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Evaluate {{ webapp_namespace }} namespace if not exists 
+- name: Evaluate {{ webapp_namespace }} namespace if not exists
   k8s:
     api_version: v1
     kind: Namespace
@@ -17,9 +17,9 @@
 
 - name: Download example files
   unarchive:
-      src: '{{webapp_operator_resources}}'
-      dest: '{{ webapp_operator_tmp }}'
-      remote_src: yes
+    src: '{{webapp_operator_resources}}'
+    dest: '{{ webapp_operator_tmp }}'
+    remote_src: true
 
 - name: Create WebApp Operator Resources
   k8s:
@@ -57,8 +57,8 @@
     api_version: route.openshift.io/v1
   register: webapp_secure_route
   until: >-
-    (webapp_secure_route.resources is defined) 
-    and (webapp_secure_route.resources|length>0) 
+    (webapp_secure_route.resources is defined)
+    and (webapp_secure_route.resources|length>0)
   retries: 10
   delay: 30
 
