--- a/ansible/roles/ocp4-workload-dil-streaming/tasks/provision_fuse.yaml
+++ b/ansible/roles/ocp4-workload-dil-streaming/tasks/provision_fuse.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Get data from samples-registry-credentials in openshift 
+- name: Get data from samples-registry-credentials in openshift
   k8s_facts:
       api_version: v1
       kind: Secret
@@ -8,30 +8,34 @@
   register: samples_registry
 
 - set_fact:
-    samples_registry: "{{ samples_registry | replace('.dockerconfigjson','dockerconfigjson') }}"
+      samples_registry: "{{ samples_registry | replace('.dockerconfigjson','dockerconfigjson') }}"
 
 - set_fact:
-    docker_config_json: "{{ samples_registry.resources[0].data.dockerconfigjson | trim }}"
-    
-- name: Subscribe Operator first, because it takes too long 
-  include_tasks: single_user.yaml
-  with_sequence: start=1 end={{ num_users }} 
-  when:
-    - num_users|int > 0
+      docker_config_json: "{{ samples_registry.resources[0].data.dockerconfigjson | trim }}"
 
-- name:  pause for 2 minutes, because operator takes sometime to run, it may fail, just re-run  
+- name: Subscribe Operator first, because it takes too long
+  include_tasks: single_user.yaml
+  with_sequence:
+      start: 1
+      end: "{{ num_users }}"
+  when:
+      - num_users | int > 0
+
+- name: pause for 2 minutes, because operator takes sometime to run, it may fail, just re-run
   pause:
-    minutes: 2
-    
+      minutes: 2
+
 - name: Create Fuse Online Cluster
   include_tasks: single_cluster.yaml
-  with_sequence: start=1 end={{ num_users }} 
+  with_sequence:
+      start: 1
+      end: "{{ num_users }}"
   when:
-    - num_users|int > 0
+      - num_users | int > 0
 
-# Turn off this, it takes too long to start 
+# Turn off this, it takes too long to start
 #- name: Check status of Fuse Online Servers
 #  include_tasks: server_run_check.yaml
-#  with_sequence: start=1 end={{ num_users }} 
+#  with_sequence: start=1 end={{ num_users }}
 #  when:
 #    - num_users|int > 0
