--- a/ansible/roles/ocp4-workload-dil-streaming/tasks/provision_shared.yaml
+++ b/ansible/roles/ocp4-workload-dil-streaming/tasks/provision_shared.yaml
@@ -33,13 +33,13 @@
     namespace: '{{ db_earth_namespace }}'
     resource_definition: "{{ lookup('template', 'configmap-data-sql.yaml.j2') }}"
 
-- name: Deploy MS SQL Server Database 
+- name: Deploy MS SQL Server Database
   k8s:
     state: present
     namespace: '{{ db_earth_namespace }}'
     resource_definition: "{{ lookup('template', 'mssql-server-linux.yaml.j2') }}"
 
-- name: Wait for Database to Start 
+- name: Wait for Database to Start
   k8s_facts:
     kind: Deployment
     name: mssql-server-linux
@@ -56,7 +56,13 @@
   delay: 10
 
 - name: Configure CDC in Database
-  shell: "oc -n {{ db_earth_namespace }} exec deployment/mssql-server-linux -- /opt/mssql-tools/bin/sqlcmd -S mssql-server-linux -U sa -P 'Password!' -i /opt/workshop/data.sql"
+  shell: >-
+    oc -n {{ db_earth_namespace }} exec deployment/mssql-server-linux
+    -- /opt/mssql-tools/bin/sqlcmd
+    -S mssql-server-linux
+    -U sa
+    -P 'Password!'
+    -i /opt/workshop/data.sql
 
 - name: Create Earth Application Namespace
   k8s:
