--- a/ansible/roles/ocp4-workload-dil-streaming/tasks/user_workspace.yaml
+++ b/ansible/roles/ocp4-workload-dil-streaming/tasks/user_workspace.yaml
@@ -22,7 +22,7 @@
 
 - name: "Print update_result"
   debug:
-    msg: "{{ update_result }}" 
+    msg: "{{ update_result }}"
 
 
 - name: Get CHE SSO admin token
@@ -37,16 +37,21 @@
     body_format: form-urlencoded
     status_code: 200
   register: access_token_result
-  
-  
+
+
 - name: Extract Access Token from Keycloack from result
   set_fact:
     access_token: '{{access_token_result.json.access_token}}'
-    
-   
+
+
 - name: Create workspace for user{{ item }} from devfile
   uri:
-    url: http://che-{{ che_project }}.{{ route_subdomain }}/api/workspace/devfile?start-after-create=true&namespace=user{{ item }}
+    url: >-
+      http://che-{{
+      che_project
+      }}.{{
+      route_subdomain
+      }}/api/workspace/devfile?start-after-create=true&namespace=user{{ item }}
     method: POST
     headers:
       Content-Type: 'text/yaml'
@@ -54,8 +59,8 @@
     body: '{{ lookup("template", "./templates/che-devfile.yaml.j2") }}'
     status_code: '201'
   register: workspace_devfile
-  ignore_errors: yes
-  
+  ignore_errors: true
+
 - name: Get workspace for user{{ item }}
   uri:
     url: "http://che-{{ che_project }}.{{ route_subdomain }}/api/workspace"
@@ -65,17 +70,17 @@
       Authorization: "Bearer {{ access_token }}"
     status_code: 200
   register: workspace_def
-  
-   
+
+
 - name: Extract workspace status
   set_fact:
-    workspace_status: '{{workspace_def.json[0].status}}' 
-    
+    workspace_status: '{{workspace_def.json[0].status}}'
+
 - name: Extract workspace id
   set_fact:
     workspace_id: '{{workspace_def.json[0].id}}'
-    
-    
+
+
 - name: Verify and start workspace for user{{ item }} again if stopped
   when: workspace_def.json[0].status == "STOPPED"
   uri:
@@ -85,7 +90,6 @@
       Accept: application/json
       Authorization: "Bearer {{ access_token }}"
     status_code: 200
-
 
 
 # RHPDS sepecific
