--- a/ansible/roles/ocp-workload-3scale-lifecycle/defaults/main.yml
+++ b/ansible/roles/ocp-workload-3scale-lifecycle/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 become_override: false
 ocp_username: adm2
-ocp_user_needs_quota: True
+ocp_user_needs_quota: true
 
 ocp_user_groups:
   - OPENTLC-PROJECT-PROVISIONERS
